still desinging remaining

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
       href="https://fonts.googleapis.com/css2?family=Long+Cang&family=Monoton&family=Staatliches&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
